# SLAM-Navigation---GO2-EDU-Mapping-Rviz-and-WebViewr-Map-

./: .gitignore  .vercelignore  README.md  publish_vercel.sh  run_vercel.sh  run_web.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  models.py  robot_gateway.py  supabase_auth_admin.py  supabase_rest.py
backend/app/routers/: auth.py  health.py  integrations.py  oracle.py  robot.py
backend/tests/: test_health.py  test_robot_gateway.py  test_security.py  test_user_management.py
diagnostics/: REDE_E_SENSORES.md  capture_go2_frame.sh  check_sensors.sh  sdk2_stop_probe.cpp  view_go2_camera.sh
docs/ci/: validation.yml
frontend/: .env.example  .gitignore  Dockerfile  LIVEKIT.md  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/api/: admin-users.js  livekit-robot-data.js  livekit-token.js
frontend/src/: main.jsx
go2_native_ws/: README.md  build_native_sensors.sh  check_go2_lidar.sh  record_mapping_data.sh  setup_go2.sh  view_go2_lidar.sh  view_go2_sensors.sh
go2_native_ws/config/: go2_lidar.rviz  go2_mapping.rviz
go2_native_ws/go2_slam/: README.md  docking.py  mapping_node.py  motion_profile.py  run_mapping.sh  save_map.sh  telemetry.py  test_docking.py  test_motion_profile.py  test_telemetry.py
go2_native_ws/maps/: autosave_20260716_042143.json  autosave_20260716_042143.pcd  autosave_20260716_042644.json  (+55 more)
go2_native_ws/native_sensors/: CMakeLists.txt
go2_native_ws/native_sensors/src/: go2_lidar_probe.cpp
project_portal/: README.md  app.js  index.html  run_dashboard.sh  server.py  styles.css
robot_gateway/: __init__.py  aruco_tracker.py  livekit_command_receiver.py  livekit_data_publisher.py  livekit_ingress.json  run_gateway.sh  run_livekit_streams.sh  server.py
scripts/: check_supabase.sh  prepare_thaina_network.sh  validate_xd4_network.sh
slam_ws/: README.md  build.sh  run_mapping.sh
supabase/: README.md  admin_queries.sql
systemd/: go2-vercel.service
(+66 files in other folders)
