[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xd4robotics-backend"
version = "0.1.0"
description = "API de integração do painel de operação remota XD4 Robotics"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "starlette>=0.46,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
